--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server/server.js",
     "test": "mocha server/**/*.test.js",
-    "test-watch":"nodemon --exec \" npm test \""
+    "test-watch": "nodemon --exec \" npm test \""
   },
   "engines": {
     "node": "10.0.0"
@@ -16,6 +16,7 @@
   "dependencies": {
     "eslint": "^5.3.0",
     "express": "^4.16.3",
+    "moment": "^2.22.2",
     "socket.io": "^2.1.1"
   },
   "devDependencies": {
